--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -39,6 +39,8 @@ jobs:
           cat benchmark.txt >> $GITHUB_OUTPUT
           echo 'EOF' >> $GITHUB_OUTPUT
       - uses: actions/github-script@v6
+        env:
+          BENCHMARK_RESULT: ${{ steps.benchmark-result.outputs.BENCHMARK_RESULT | utf8 }}
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
@@ -46,7 +48,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "```${{ steps.benchmark-result.outputs.BENCHMARK_RESULT }}```"
+              body: "\n\`\`\`\n${process.env.BENCHMARK_RESULT}\n\`\`\`"
             })
       - run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: branch
