--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -48,7 +48,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "\n\`\`\`\n${process.env.BENCHMARK_RESULT}\n\`\`\`"
+              body: "\n\`\`\`\n${{process.env.BENCHMARK_RESULT}}\n\`\`\`"
             })
       - run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: branch
