output it as a step summary instead

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -34,22 +34,7 @@ jobs:
           else
             pnpm run bench --run --outputJson benchmark.json > benchmark.txt
           fi
-          echo 'BENCHMARK_RESULT<<EOF' >> $GITHUB_OUTPUT
-          sed -i -e '$a\' benchmark.txt
-          cat benchmark.txt >> $GITHUB_OUTPUT
-          echo 'EOF' >> $GITHUB_OUTPUT
-      - uses: actions/github-script@v6
-        env:
-          BENCHMARK_RESULT: ${{ steps.benchmark-result.outputs.BENCHMARK_RESULT }}
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: "\n\`\`\`\n${{ env.BENCHMARK_RESULT }}\n\`\`\`"
-            })
+          cat benchmark.txt >> $GITHUB_STEP_SUMMARY
       - run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: branch
       - name: Store benchmark dataq
