--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,7 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  # node builds all packages
-  build-node:
+  build-packages:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,9 +14,7 @@ jobs:
           version: 9
       - shell: bash
         run: |
-          cd packages/node
-          pnpm install
-          pnpm build
+          pnpm install --no-frozen-lockfile
 
   build-example-canvas:
     runs-on: ubuntu-latest
@@ -28,10 +25,8 @@ jobs:
           version: 9
       - shell: bash
         run: |
-          pnpm install
-          cd packages/node
-          pnpm build
-          cd ../../examples/canvas
+          pnpm install --no-frozen-lockfile
+          cd examples/canvas
           pnpm build
 
   build-example-chat:
@@ -43,8 +38,6 @@ jobs:
           version: 9
       - shell: bash
         run: |
-          pnpm install
-          cd packages/node
-          pnpm build
-          cd ../../examples/chat
+          pnpm install --no-frozen-lockfile
+          cd examples/chat
           pnpm build
