--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,5 @@ jobs:
           version: 9
       - shell: bash
         run: |
-          pnpm install
-          cd packages/object && pnpm build
-          cd ../.. && pnpm test
+          pnpm install --no-frozen-lockfile
+          pnpm test
