--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,13 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
 	"files": {
-		"ignore": ["**/dist/*", "**/docs/*", "**/*_pb.ts", "**/bundle/*"]
+		"ignore": [
+			"**/dist/*",
+			"**/docs/*",
+			"**/*_pb.ts",
+			"**/bundle/*",
+			"**/package.json"
+		]
 	},
 	"linter": {
 		"enabled": true,
