--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -1,36 +1,36 @@
 {
- "name": "topology-example-chat",
- "version": "0.1.0",
- "description": "Topology Protocol Chat Exmaple",
- "main": "src/index.ts",
- "repository": "https://github.com/topology-foundation/ts-topology.git",
- "license": "MIT",
- "scripts": {
-  "asbuild": "asc --config asconfig.json --target release",
-  "build": "vite build",
-  "clean": "rm -rf dist/ node_modules/",
-  "dev": "vite serve",
-  "start": "ts-node ./src/index.ts"
- },
- "dependencies": {
-  "@topology-foundation/crdt": "0.1.0",
-  "@topology-foundation/network": "0.1.0",
-  "@topology-foundation/node": "0.1.0",
-  "@topology-foundation/object": "0.1.0",
-  "assemblyscript": "^0.27.29",
-  "crypto-browserify": "^3.12.0",
-  "memfs": "^4.11.1",
-  "process": "^0.11.10",
-  "stream-browserify": "^3.0.0",
-  "ts-node": "^10.9.2",
-  "uint8arrays": "^5.1.0",
-  "vm-browserify": "^1.1.2"
- },
- "devDependencies": {
-  "@types/node": "^22.5.4",
-  "ts-loader": "^9.5.1",
-  "typescript": "^5.5.4",
-  "vite": "^5.4.3",
-  "vite-plugin-node-polyfills": "^0.22.0"
- }
+  "name": "topology-example-chat",
+  "version": "0.1.1-0",
+  "description": "Topology Protocol Chat Exmaple",
+  "main": "src/index.ts",
+  "repository": "https://github.com/topology-foundation/ts-topology.git",
+  "license": "MIT",
+  "scripts": {
+    "asbuild": "asc --config asconfig.json --target release",
+    "build": "vite build",
+    "clean": "rm -rf dist/ node_modules/",
+    "dev": "vite serve",
+    "start": "ts-node ./src/index.ts"
+  },
+  "dependencies": {
+    "@topology-foundation/crdt": "0.1.1-0",
+    "@topology-foundation/network": "0.1.1-0",
+    "@topology-foundation/node": "0.1.1-0",
+    "@topology-foundation/object": "0.1.1-0",
+    "assemblyscript": "^0.27.29",
+    "crypto-browserify": "^3.12.0",
+    "memfs": "^4.11.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "ts-node": "^10.9.2",
+    "uint8arrays": "^5.1.0",
+    "vm-browserify": "^1.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3",
+    "vite-plugin-node-polyfills": "^0.22.0"
+  }
 }
