--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
       - run: pnpm install --no-frozen-lockfile
-      - run: pnpm publish --provenance --workspace packages --access public
+      - run: npm publish --provenance --workspace packages --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -35,6 +35,6 @@ jobs:
           node-version: "20.x"
           registry-url: "https://npm.pkg.github.com"
       - run: pnpm install --no-frozen-lockfile
-      - run: pnpm publish --provenance --workspace packages --access public
+      - run: npm publish --provenance --workspace packages --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
