--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,6 +1,6 @@
 {
  "name": "@topology-foundation/network",
- "version": "0.1.1-3",
+ "version": "0.1.1",
  "license": "MIT",
  "repository": {
   "type": "git",
