--- a/packages/blueprints/package.json
+++ b/packages/blueprints/package.json
@@ -1,43 +1,38 @@
 {
- "name": "@topology-foundation/crdt",
- "version": "0.1.1",
- "license": "MIT",
- "repository": {
-  "type": "git",
-  "url": "git+https://github.com/topology-foundation/ts-topology.git"
- },
- "type": "module",
- "types": "./dist/src/index.d.ts",
- "files": [
-  "src",
-  "dist",
-  "!dist/test",
-  "!**/*.tsbuildinfo"
- ],
- "exports": {
-  ".": {
-   "types": "./dist/src/index.d.ts",
-   "import": "./dist/src/index.js"
-  },
-  "./wasm": {
-   "types": "./dist/src/index.d.ts",
-   "import": "./src/index.asc.ts"
-  }
- },
- "scripts": {
-  "asbuild": "yarn asbuild:debug && yarn asbuild:release",
-  "asbuild:debug": "asc --config asconfig.json --target debug",
-  "asbuild:release": "asc --config asconfig.json --target release",
-  "build": "tsc -b",
-  "clean": "rm -rf dist/ node_modules/",
-  "prepack": "tsc -b",
-  "test": "vitest"
- },
- "devDependencies": {
-  "@topology-foundation/object": "0.1.1",
-  "assemblyscript": "^0.27.29"
- },
- "dependencies": {
-  "@thi.ng/random": "^4.0.3"
- }
+	"name": "@topology-foundation/blueprints",
+	"version": "0.1.1",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/topology-foundation/ts-topology.git"
+	},
+	"type": "module",
+	"types": "./dist/src/index.d.ts",
+	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+	"exports": {
+		".": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./dist/src/index.js"
+		},
+		"./wasm": {
+			"types": "./dist/src/index.d.ts",
+			"import": "./src/index.asc.ts"
+		}
+	},
+	"scripts": {
+		"asbuild": "yarn asbuild:debug && yarn asbuild:release",
+		"asbuild:debug": "asc --config asconfig.json --target debug",
+		"asbuild:release": "asc --config asconfig.json --target release",
+		"build": "tsc -b",
+		"clean": "rm -rf dist/ node_modules/",
+		"prepack": "tsc -b",
+		"test": "vitest"
+	},
+	"devDependencies": {
+		"@topology-foundation/object": "0.1.1",
+		"assemblyscript": "^0.27.29"
+	},
+	"dependencies": {
+		"@thi.ng/random": "^4.0.3"
+	}
 }
