some more refactors on crdts mentions

--- a/examples/chat/asconfig.json
+++ b/examples/chat/asconfig.json
@@ -20,7 +20,7 @@
 	"options": {
 		"lib": {
 			"@topology-foundation/crdt": [
-				"../node_modules/@topology-foundation/crdt/src/index.asc.ts"
+				"./node_modules/@topology-foundation/blueprints/src/index.asc.ts"
 			]
 		}
 	}
