--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,4 +1,6 @@
 version: v2
+managed:
+  enabled: true
 plugins:
   - local: ./node_modules/ts-proto/protoc-gen-ts_proto
     strategy: directory
@@ -6,8 +8,3 @@ plugins:
     opt:
       - esModuleInterop=true
       - fileSuffix=_pb
-inputs:
-  - directory: ./packages
-    exclude_paths:
-      - packages/network/node_modules
-      - packages/object/node_modules
