--- a/buf.yaml
+++ b/buf.yaml
@@ -1,8 +1,8 @@
 version: v2
 modules:
-  - path: packages/node
-    excludes:
-      - packages/node/node_modules
+  # - path: packages/node
+  #   excludes:
+  #     - packages/node/node_modules
   - path: packages/network
     excludes:
       - packages/network/node_modules
