--- a/packages/node/tsconfig.json
+++ b/packages/node/tsconfig.json
@@ -1,18 +1,18 @@
 {
-	"extends": "../../tsconfig.json",
-	"compilerOptions": {
-		"outDir": "dist"
-	},
-	"references": [
-		{
-			"path": "../blueprints"
-		},
-		{
-			"path": "../network"
-		},
-		{
-			"path": "../object"
-		}
-	],
-	"include": ["src/**/*.ts"]
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "dist"
+  },
+  "references": [
+    {
+      "path": "../blueprints"
+    },
+    {
+      "path": "../network"
+    },
+    {
+      "path": "../object"
+    }
+  ],
+  "include": ["src/**/*.ts", "configs/*.json"]
 }
