--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -33,6 +33,7 @@
  },
  "dependencies": {
   "@bufbuild/protobuf": "^2.0.0",
-  "ts-proto": "^2.0.3"
+  "ts-proto": "^2.0.3",
+  "tslog": "^4.9.3"
  }
 }
