update libp2p deps not detected by dependabot

--- a/package.json
+++ b/package.json
@@ -1,55 +1,55 @@
 {
-  "name": "ts-topology",
-  "description": "The official TypeScript implementation of Topology Protocol",
-  "version": "0.2.0",
-  "license": "MIT",
-  "homepage": "https://topology.gg/",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/topology-foundation/ts-topology.git"
-  },
-  "bugs": {
-    "url": "https://github.com/topology-foundation/ts-topology/issues"
-  },
-  "workspaces": [
-    "packages/*",
-    "examples/*"
-  ],
-  "scripts": {
-    "bench": "vitest bench",
-    "biome-check": "biome check",
-    "docs": "typedoc",
-    "postinstall": "pnpm --filter '@topology-foundation/*' build",
-    "proto-gen": "buf generate",
-    "release": "release-it",
-    "test": "vitest"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@release-it-plugins/workspaces": "^4.2.0",
-    "@types/node": "^22.5.4",
-    "assemblyscript": "^0.27.29",
-    "release-it": "^17.6.0",
-    "ts-proto": "^2.0.3",
-    "typedoc": "^0.26.6",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.3",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5"
-  },
-  "private": true,
-  "release-it": {
-    "plugins": {
-      "@release-it-plugins/workspaces": {
-        "publish": false
-      }
-    },
-    "npm": false,
-    "git": {
-      "commitMessage": "chore: release v${version}"
-    },
-    "github": {
-      "release": true
-    }
-  }
+	"name": "ts-topology",
+	"description": "The official TypeScript implementation of Topology Protocol",
+	"version": "0.2.0",
+	"license": "MIT",
+	"homepage": "https://topology.gg/",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/topology-foundation/ts-topology.git"
+	},
+	"bugs": {
+		"url": "https://github.com/topology-foundation/ts-topology/issues"
+	},
+	"workspaces": [
+		"packages/*",
+		"examples/*"
+	],
+	"scripts": {
+		"bench": "vitest bench",
+		"biome-check": "biome check",
+		"clean": "pnpm --filter '@topology-foundation/*' clean",
+		"docs": "typedoc",
+		"proto-gen": "buf generate",
+		"release": "release-it",
+		"test": "vitest"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.8.3",
+		"@release-it-plugins/workspaces": "^4.2.0",
+		"@types/node": "^22.5.4",
+		"assemblyscript": "^0.27.29",
+		"release-it": "^17.6.0",
+		"ts-proto": "^2.0.3",
+		"typedoc": "^0.26.6",
+		"typescript": "^5.5.4",
+		"vite": "^5.4.3",
+		"vite-tsconfig-paths": "^5.0.1",
+		"vitest": "^2.0.5"
+	},
+	"private": true,
+	"release-it": {
+		"plugins": {
+			"@release-it-plugins/workspaces": {
+				"publish": false
+			}
+		},
+		"npm": false,
+		"git": {
+			"commitMessage": "chore: release v${version}"
+		},
+		"github": {
+			"release": true
+		}
+	}
 }
