rm one more dep from node

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -38,7 +38,6 @@
   "@topology-foundation/blueprints": "0.2.0",
   "@topology-foundation/network": "0.2.0",
   "@topology-foundation/object": "0.2.0",
-  "commander": "^12.1.0",
-  "it-length-prefixed": "^9.1.0"
+  "commander": "^12.1.0"
  }
 }
