deps: bump libp2p 2.0.2 (#171)
Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -35,12 +35,11 @@
   "vitest": "^2.0.5"
  },
  "dependencies": {
-  "@chainsafe/libp2p-gossipsub": "^13.1.0",
-  "@libp2p/interface": "^1.7.0",
+  "@chainsafe/libp2p-gossipsub": "^14.1.0",
+  "@libp2p/interface": "^2.1.0",
   "@topology-foundation/blueprints": "0.2.0",
   "@topology-foundation/network": "0.2.0",
   "@topology-foundation/object": "0.2.0",
-  "commander": "^12.1.0",
-  "it-length-prefixed": "^9.1.0"
+  "commander": "^12.1.0"
  }
 }
