--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,38 +1,40 @@
 {
- "name": "@topology-foundation/object",
- "version": "0.2.0",
- "license": "MIT",
- "repository": {
-  "type": "git",
-  "url": "git+https://github.com/topology-foundation/ts-topology.git"
- },
- "type": "module",
- "types": "./dist/src/index.d.ts",
- "files": [
-  "src",
-  "dist",
-  "!dist/test",
-  "!**/*.tsbuildinfo"
- ],
- "main": "./dist/src/index.js",
- "exports": {
-  ".": {
-   "types": "./dist/src/index.d.ts",
-   "import": "./dist/src/index.js"
+    "name": "@topology-foundation/object",
+    "version": "0.2.0",
+    "license": "MIT",
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/topology-foundation/ts-topology.git"
+    },
+    "type": "module",
+    "types": "./dist/src/index.d.ts",
+    "files": [
+      "src",
+      "dist",
+      "!dist/test",
+      "!**/*.tsbuildinfo"
+    ],
+    "main": "./dist/src/index.js",
+    "module": "./dist/src/index.js",
+    "exports": {
+      ".": {
+        "types": "./dist/src/index.d.ts",
+        "import": "./dist/src/index.js",
+        "require": "./dist/src/index.js"
+      }
+    },
+    "scripts": {
+      "asbuild": "asc --config asconfig.json --target release",
+      "build": "tsc -b",
+      "clean": "rm -rf dist/ node_modules/",
+      "prepack": "tsc -b",
+      "test": "vitest"
+    },
+    "devDependencies": {
+      "assemblyscript": "^0.27.29"
+    },
+    "dependencies": {
+      "@bufbuild/protobuf": "^2.0.0",
+      "ts-proto": "^2.0.3"
+    }
   }
- },
- "scripts": {
-  "asbuild": "asc --config asconfig.json --target release",
-  "build": "tsc -b",
-  "clean": "rm -rf dist/ node_modules/",
-  "prepack": "tsc -b",
-  "test": "vitest"
- },
- "devDependencies": {
-  "assemblyscript": "^0.27.29"
- },
- "dependencies": {
-  "@bufbuild/protobuf": "^2.0.0",
-  "ts-proto": "^2.0.3"
- }
-}
