--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -43,7 +43,9 @@
   "@libp2p/devtools-metrics": "^0.2.5",
   "@libp2p/identify": "^2.1.4",
   "@libp2p/interface-pubsub": "^4.0.1",
+  "@libp2p/kad-dht": "^12.1.5",
   "@libp2p/mdns": "^10.1.3",
+  "@libp2p/peer-id": "^4.2.4",
   "@libp2p/peer-id-factory": "^4.2.4",
   "@libp2p/pubsub-peer-discovery": "^10.0.2",
   "@libp2p/webrtc": "^4.1.8",
