--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -52,6 +52,7 @@
   "@libp2p/websockets": "^8.1.2",
   "@libp2p/webtransport": "^4.1.9",
   "@multiformats/multiaddr": "^12.3.1",
+  "it-last": "^3.0.6",
   "it-length-prefixed": "^9.1.0",
   "it-map": "^3.1.1",
   "it-pipe": "^3.0.1",
