--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,13 +1,20 @@
 version: v2
+managed:
+  enabled: true
 plugins:
   - local: ./node_modules/ts-proto/protoc-gen-ts_proto
-    strategy: directory
     out: ./packages
     opt:
       - esModuleInterop=true
       - fileSuffix=_pb
+      - ts_proto_opt=outputServices=grpc-js
+  - remote: buf.build/grpc/node
+    out: ./packages
+    opt:
+      - ts_proto_opt=esModuleInterop=true
 inputs:
   - directory: ./packages
     exclude_paths:
+      - packages/node/node_modules
       - packages/network/node_modules
       - packages/object/node_modules
