--- a/packages/node/tsconfig.json
+++ b/packages/node/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"extends": "../../tsconfig.json",
+
 	"compilerOptions": {
 		"outDir": "dist"
 	},
@@ -14,5 +15,5 @@
 			"path": "../object"
 		}
 	],
-	"include": ["src/**/*.ts"]
+	"include": ["src/**/*.ts", "src/**/*.js"]
 }
