--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           version: 9
       - run: |
-          pnpm install --no-frozen-lockfile
+          pnpm install
           yarn docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
