--- a/examples/local-env-chat/package.json
+++ b/examples/local-env-chat/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "topology-example-chat",
+  "name": "topology-example-localdev",
   "version": "0.2.0",
-  "description": "Topology Protocol Chat Example",
+  "description": "Topology Protocol Local Dev Example",
   "main": "src/index.ts",
   "repository": "https://github.com/topology-foundation/ts-topology.git",
   "license": "MIT",
