--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -35,5 +35,9 @@
   },
   "devDependencies": {
     "assemblyscript": "^0.27.29"
+  },
+  "dependencies": {
+    "winston": "^3.15.0",
+    "winston-transport": "^4.8.0"
   }
 }
