--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"clean": "pnpm --filter '@topology-foundation/*' clean",
 		"docs": "typedoc",
 		"postinstall": "pnpm --filter '@topology-foundation/*' build",
-		"proto-gen": "buf generate packages/object/src/proto -o packages/object/src/proto && buf generate packages/network/src/proto -o packages/network/src/proto",
+		"proto-gen": "pnpm proto-gen:object && pnpm proto-gen:network",
+		"proto-gen:object": "buf generate packages/object/src/proto -o packages/object/src/proto",
+		"proto-gen:network": "buf generate packages/network/src/proto -o packages/network/src/proto",
 		"release": "release-it",
 		"test": "vitest"
 	},
