--- a/packages/object/tsconfig.json
+++ b/packages/object/tsconfig.json
@@ -3,5 +3,10 @@
 	"compilerOptions": {
 		"outDir": "dist"
 	},
+	"references": [
+		{
+			"path": "../logger"
+		}
+	],
 	"include": ["src/**/*.ts"]
 }
