--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,6 +1,6 @@
 {
  "name": "@topology-foundation/object",
- "version": "0.2.0",
+ "version": "0.2.1-0",
  "license": "MIT",
  "repository": {
   "type": "git",
