--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -49,7 +49,7 @@
   "@libp2p/websockets": "^9.0.7",
   "@libp2p/webtransport": "^5.0.9",
   "@multiformats/multiaddr": "^12.3.1",
-  "@topology-foundation/logger": "^0.2.0",
+  "@topology-foundation/logger": "^0.2.1-0",
   "it-length-prefixed": "^9.1.0",
   "it-map": "^3.1.1",
   "it-pipe": "^3.0.1",
