--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -33,7 +33,7 @@
  },
  "dependencies": {
   "@bufbuild/protobuf": "^2.0.0",
-  "@topology-foundation/logger": "^0.2.0",
+  "@topology-foundation/logger": "^0.2.1-0",
   "ts-proto": "^2.2.4"
  }
 }
