feat: logging package (#206)

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -42,6 +42,7 @@
   "@topology-foundation/blueprints": "0.2.1-0",
   "@topology-foundation/network": "0.2.1-0",
   "@topology-foundation/object": "0.2.1-0",
+  "@topology-foundation/logger": "0.2.1-0",
   "commander": "^12.1.0",
   "google-protobuf": "^3.21.2"
  }
