chore: add el to codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*	@d-roak @JanLewDev @trungnotchung @winprn @hoangquocvietuet
+*	@d-roak @JanLewDev @elielnfinic @trungnotchung @winprn @hoangquocvietuet
