add node proto to the registry

--- a/buf.yaml
+++ b/buf.yaml
@@ -1,5 +1,8 @@
 version: v2
 modules:
+  - path: packages/node/src/proto
+    name: buf.build/topology/node
+
   - path: packages/object/src/proto
     name: buf.build/topology/object
 
