--- a/.github/workflows/buf-registry.yml
+++ b/.github/workflows/buf-registry.yml
@@ -14,4 +14,5 @@ jobs:
         with:
           token: ${{ secrets.BUF_TOKEN }}
           tpr_comment: false
+          lint: false
           push: true
