--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -39,6 +39,7 @@
   "@chainsafe/libp2p-gossipsub": "^14.1.0",
   "@grpc/grpc-js": "^1.12.2",
   "@libp2p/interface": "^2.1.3",
+  "dotenv": "^16.4.5",
   "@topology-foundation/blueprints": "0.2.1-4",
   "@topology-foundation/network": "0.2.1-4",
   "@topology-foundation/object": "0.2.1-4",
