--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-topology",
   "description": "The official TypeScript implementation of Topology Protocol",
-  "version": "0.2.1-4",
+  "version": "0.2.1",
   "license": "MIT",
   "homepage": "https://topology.gg/",
   "repository": {
