--- a/packages/blueprints/package.json
+++ b/packages/blueprints/package.json
@@ -1,6 +1,6 @@
 {
  "name": "@topology-foundation/blueprints",
- "version": "0.2.1-4",
+ "version": "0.2.1",
  "license": "MIT",
  "repository": {
   "type": "git",
@@ -34,7 +34,7 @@
   "test": "vitest"
  },
  "devDependencies": {
-  "@topology-foundation/object": "0.2.1-4",
+  "@topology-foundation/object": "0.2.1",
   "assemblyscript": "^0.27.29"
  },
  "dependencies": {
