--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topology-foundation/logger",
-  "version": "0.2.1-4",
+  "version": "0.2.1",
   "license": "MIT",
   "repository": {
     "type": "git",
