--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -1,6 +1,6 @@
 {
  "name": "@topology-foundation/object",
- "version": "0.2.1-4",
+ "version": "0.2.1",
  "license": "MIT",
  "repository": {
   "type": "git",
@@ -33,7 +33,7 @@
  },
  "dependencies": {
   "@bufbuild/protobuf": "^2.0.0",
-  "@topology-foundation/logger": "^0.2.1-4",
+  "@topology-foundation/logger": "^0.2.1",
   "ts-proto": "^2.2.4"
  }
 }
