--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -27,7 +27,7 @@
   "clean": "rm -rf dist/ node_modules/",
   "prepack": "tsc -b",
   "test": "vitest",
-  "benchmark-hashgraph": "npx tsx tests/hashgraph.bench.ts"
+  "benchmark": "npx tsx tests/hashgraph.bench.ts | tee benchmark-output.txt"
  },
  "devDependencies": {
   "assemblyscript": "^0.27.29",
