--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'npm'
+          node-version: "20.x"
+          registry-url: "https://npm.pkg.github.com"
       - name: Run benchmark
         run: cd packages/object && npm install && npm run benchmark
 
