fix: update action setup pnpm

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -11,16 +11,18 @@ permissions:
 
 jobs:
   benchmark:
-    name: Run JavaScript benchmark
+    name: Run benchmark
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
         with:
-          node-version: "20.x"
-          registry-url: "https://npm.pkg.github.com"
-      - name: Run benchmark
-        run: cd packages/object && npm install && npm run benchmark
+          version: 9
+      - shell: bash
+        run: |
+          pnpm install --no-frozen-lockfile
+          cd packages/object
+          pnpm run benchmark
 
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
