--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -31,7 +31,7 @@ jobs:
           tool: 'benchmarkjs'
           output-file-path: packages/object/benchmark-output.txt
           # github-token: ${{ secrets.GITHUB_TOKEN }}
-          auto-push: true
+          # auto-push: true
           # Show alert with commit comment on detecting possible performance regression
           alert-threshold: '200%'
           # comment-on-alert: true
