--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -29,11 +29,11 @@ jobs:
           name: Benchmark.js Benchmark
           tool: 'benchmarkjs'
           output-file-path: packages/object/benchmark-output.txt
-          # github-token: ${{ secrets.GITHUB_TOKEN }}
-          # auto-push: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          auto-push: true
           # Show alert with commit comment on detecting possible performance regression
           alert-threshold: '200%'
-          # comment-on-alert: true
+          comment-on-alert: true
           fail-on-alert: true
           gh-pages-branch: main
           benchmark-data-dir-path: doc/benchmarks
