--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -26,10 +26,13 @@
   "build": "tsc -b",
   "clean": "rm -rf dist/ node_modules/",
   "prepack": "tsc -b",
-  "test": "vitest"
+  "test": "vitest",
+  "benchmark": "npx tsx tests/hashgraph.bench.ts | tee benchmark-output.txt"
  },
  "devDependencies": {
-  "assemblyscript": "^0.27.29"
+  "assemblyscript": "^0.27.29",
+  "benchmark": "^2.1.4",
+  "tsx": "4.19.1"
  },
  "dependencies": {
   "@bufbuild/protobuf": "^2.0.0",
