--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,6 +2,7 @@ name: Generate docs
 on:
   release:
     types: [published]
+  workflow_call:
 permissions:
   pages: write
   id-token: write
@@ -13,9 +14,15 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 9
+      - name: Get benchmark cache
+        uses: actions/cache@v4
+        with:
+          path: ./cache
+          key: ${{ runner.os }}-benchmark
       - run: |
           pnpm install --no-frozen-lockfile
           yarn docs
+          cp -r ./cache/* ./docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
