--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -6,7 +6,11 @@ on:
     types: [opened, synchronize]
     branches: [main]
 
-permissions: write-all
+permissions:
+  pages: write
+  id-token: write
+  contents: write
+  pull-requests: write
 
 jobs:
   benchmark:
