--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
   pull_request_target:
-    types: [opened, synchronize]
+    types: [opened, edited, synchronize]
     branches: [main]
 
 permissions:
